working on being able to add new pretzels and post to backend from the home page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+/* Home Page */
+
 .homePage {
   background-color: blanchedalmond;
 }
@@ -27,3 +29,21 @@
   margin: 50px 200px;
   text-align: center;
 }
+
+
+
+/* Single Pretzel Page */
+.singlePretzelPage {
+  background-color: blanchedalmond;
+
+}
+
+.singlePretzelPage {
+  text-align: center;
+  flex: 1.5;
+}
+
+.singlePretzelPagePretzelInfo {
+  margin: 50px;
+}
+
