--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,13 @@
+/* universal */
+.pageHeader {
+  display: flex;
+}
+
+.pageHeader nav {
+  display: flex;
+  flex-direction: column;
+  
+}
 /* Home Page */
 
 .homePage {
@@ -7,16 +17,6 @@
 .homePage h1 {
   text-align: center;
   flex: 1.5;
-}
-
-.pageHeader {
-  display: flex;
-}
-
-.pageHeader nav {
-  display: flex;
-  flex-direction: column;
-  
 }
 
 
@@ -30,6 +30,31 @@
   text-align: center;
 }
 
+
+/* All Pretzels Page */
+.allPretzelsPage {
+  background-color: blanchedalmond;
+}
+
+.allPretzelsPage h1 {
+  text-align: center;
+  flex: 1.5;
+}
+
+
+.allPretzelsPageSiteExplanation {
+  margin: 35px 200px;
+  text-align: center;
+}
+
+.allPretzelsPagePretzelsByRank {
+  margin: 50px 200px;
+  text-align: center;
+}
+
+.createPretzelForm {
+  text-align: center;
+}
 
 
 /* Single Pretzel Page */
@@ -47,7 +72,3 @@
   margin: 50px;
 }
 
-.createPretzelForm {
-  text-align: center;
-
-}
