able to render list of users on all user page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,8 +6,9 @@
 .pageHeader nav {
   display: flex;
   flex-direction: column;
-  
 }
+
+
 /* Home Page */
 
 .homePage {
@@ -72,3 +73,6 @@
   margin: 50px;
 }
 
+
+
+/*  */
