--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,3 +98,10 @@
    box-shadow: 4px 4px black;
    margin: 5px;
  }
+
+
+ /* single user page */
+ /* hiding the input for the user in the create pretzel form */
+ .userFieldToHide {
+   display: none;
+ }
