added photo to pretzel model and added it to other areas in state and able to ost and render on the single pretzel page. also added a link from the user list of pretzels to the individual pretzel page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,6 +96,10 @@
    margin: 5px;
  }
 
+ .singlePretzelPagePhoto {
+   width: 200px;
+ }
+
 
  /* single user page */
  /* hiding the input for the user in the create pretzel form */
@@ -123,3 +127,9 @@
   text-align: center;
   margin: 100px;
 }
+
+.oneUserPretzelList {
+  text-align: center;
+}
+
+
