added a filter in one user, trying to filter thorugh all pretzel data to only get pretzels with userId only. changed model of pretzel so the userId is mongoose.Types.ObjectId

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -103,9 +103,9 @@
 
  /* single user page */
  /* hiding the input for the user in the create pretzel form */
- .userFieldToHide {
+ /* .userFieldToHide {
    display: none;
- }
+ } */
 
  .oneUserPageHeader {
     text-align: center;
