--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,6 @@
 }
 
 
-
 /* Home Page */
 
 /* .homePage {
@@ -27,8 +26,11 @@
 
 
 .homePageSiteExplanation {
-  margin: 35px 200px;
   text-align: center;
+}
+
+.homePageSiteExplanation h2 {
+  line-height: 1.5;
 }
 
 .homePagePretzelsByRank {
@@ -82,6 +84,10 @@
 .singlePretzelPagePhoto {
   width: 200px;
   border-radius: 25px;
+}
+
+.singlePretzelPagePretzelNotes {
+  margin: 35px auto;
 }
 
 
