--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,10 +168,25 @@
 .usersListFilteredSearch {
   text-align: center;
 
+
 }
 
 .usersListFilteredSearch a{
   margin: 10px;
+  color: #343a40;
+  text-decoration: none;
+}
+
+.usersListFilteredSearch a:hover{
+  text-decoration: none;
+  color: #343a40;
+}
+
+.usersListFilteredSearch a p:hover{
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  transition: .8s;
 }
 
  .usersListFilteredSearch img {
