--- a/client/src/App.css
+++ b/client/src/App.css
@@ -196,7 +196,7 @@
   color: #343a40;
 }
 
-.usersListFilteredSearch a p:hover{
+.usersListFilteredSearch a h6:hover{
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
@@ -253,6 +253,22 @@
 
 .oneUserPretzelListItem {
   margin: 30px auto;
+}
+
+.oneUserPretzelListItem a {
+  color:#343a40;
+}
+
+.oneUserPretzelListItem a:hover {
+  color:#343a40;
+  text-decoration: none;
+}
+
+.oneUserPretzelListItem h6:hover {
+-webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
+  transition: .8s;
 }
 
 .oneUserPretzelListItem img {
