--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,11 +2,9 @@
 .App {
   background-color: blanchedalmond;
 }
-
 .navLink {
   color: white
 }
-
 .navLink:hover {
   color: white;
   text-decoration: none;
@@ -15,18 +13,15 @@
   transform: rotateZ(-30deg);
   transition: .5s
 }
-
 .createForm {
   background-color: whitesmoke;
   padding: 1px 0 25px 0;
   border-radius: 10px;
   border: #343a40 3px solid;
 }
-
 .pageHeader {
   display: flex;
 }
-
 .submitFormButton {
   background-color: #343a40;
   border: #343a40;
@@ -39,13 +34,9 @@
   border: #343a40;
   box-shadow: 0 0 15px black;
 }
-
-
-
 .createNewFormToggleButton {
   margin: 20px auto;
 }
-
 .createNewFormToggleButton button {
   background-color: #343a40;
   border: #343a40;
@@ -53,9 +44,20 @@
   color: white;
   padding: 5px 8px;
 }
-
 .createNewFormToggleButton :hover {
   background-color: #4c545c;
+  border: #343a40;
+  box-shadow: 0 0 15px black;
+}
+.deleteButton {
+  background-color: #343a40;
+  border: #343a40;
+  border-radius: 10px;
+  color: white;
+  padding: 5px 8px;
+}
+.deleteButton:hover {
+  background-color: red;
   border: #343a40;
   box-shadow: 0 0 15px black;
 }
@@ -66,48 +68,36 @@
   height: 1085px;   /* sets length of homepage to certain length*/
   overflow: hidden; /* keeps overflow of users from showing on home page*/
 }
-
 .homePage h1 {
   text-align: center;
   margin: 35px auto;
 }
-
 .homePageHeader {
   margin: 50px auto;
 }
-
 .homePageSiteExplanation {
   text-align: center;
 }
-
 .homePageSiteExplanation h2 {
   line-height: 1.5;
 }
-
-
 .homePageUserSearchArea {
   overflow:hidden; /* keeps overflow of people hidden */
 }
-
 .homePageUserArea {
   display:flex;
   justify-content: space-evenly;
 }
-
 .searchAllUserHomePageInputField {
   margin: 20px auto;
   text-align: center;
 }
-
 .homePageCreateUserArea {
   text-align: center;
 }
-
-
 .newUserNameInputHomePage {
   margin: 20px auto;
 }
-
 .newUserPhotoInputHomePage {
   margin: 20px auto;
 
@@ -118,22 +108,18 @@
 .allPretzelsPage {
   background-color: blanchedalmond;
 }
-
 .allPretzelsPage h1 {
   text-align: center;
   flex: 1.5;
 }
-
 .allPretzelsPageSiteExplanation {
   margin: 35px 200px;
   text-align: center;
 }
-
 .allPretzelsPagePretzelsByRank {
   margin: 50px 200px;
   text-align: center;
 }
-
 
 
 /* Single Pretzel Page */
@@ -142,29 +128,20 @@
   text-align: center;
   height: 950px;
 }
-
 .singlePretzelPage h1 {
   margin: 35px auto;
 }
-
-
 .singlePretzelPagePretzelBody {
   display: flex;
   justify-content: space-evenly;
 }
-
 .singlePretzelPagePhoto {
   width: 200px;
   border-radius: 25px;
   border: 5px solid #343a40
 }
-
 .singlePretzelPagePretzelNotes {
   margin: 35px 50px;
-}
-
-#deletePretzelButton {
-  margin: 50px auto;
 }
 
 
@@ -172,41 +149,32 @@
 .allUsersPage {
   height: 1000px;
 }
-
 .allUsersPage h1 {
   text-align: center;
   margin: 35px auto;
 }
-
 .searchAllUserInputField {
   display: flex;
   justify-content: center;
 }
-
 .usersListFilteredSearch {
   text-align: center;
-
-
 }
-
 .usersListFilteredSearch a{
   margin: 10px;
   color: #343a40;
   text-decoration: none;
 }
-
 .usersListFilteredSearch a:hover{
   text-decoration: none;
   color: #343a40;
 }
-
 .usersListFilteredSearch a h6:hover{
   -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
   transition: .8s;
 }
-
  .usersListFilteredSearch img {
    width: 115px;
    height: 115px;
@@ -222,68 +190,59 @@
  .oneUserPage {
    height: 1500px;
  }
-
  .oneUserPageHeader {
     text-align: center;
     margin: 30px auto;
  }
-
  .oneUserPageHeader img {
   width: 200px;
   border-radius: 25px;
   text-align: center;
   border: 5px solid #343a40;
  }
-
  .oneUserPageBody {
    display: flex;
    justify-content: space-evenly;
    padding: 0 0 100px 0;
 
  }
-
  .oneUserMyPretzelArea h2 {
     text-align: center;
  }
-
  .oneUserCreatePretzelArea {
    text-align: center;
  }
-
  .createPretzelInputField {
    margin: 20px auto;
  }
-
-
 .oneUserPretzelList {
   text-align: center;
 }
-
 .oneUserPretzelListItem {
   margin: 30px auto;
 }
-
 .oneUserPretzelListItem a {
   color:#343a40;
 }
-
 .oneUserPretzelListItem a:hover {
   color:#343a40;
   text-decoration: none;
 }
-
 .oneUserPretzelListItem h6:hover {
 -webkit-transform: scale(1.3);
   -ms-transform: scale(1.3);
   transform: scale(1.3);
   transition: .8s;
 }
-
 .oneUserPretzelListItem img {
   height:100px;
   border-radius: 10px;
 }
-
+#deleteUserButton {
+  display:flex;
+  justify-content: center;
+  margin: 50px auto;
+}
 
 
 
